--- a/experiences.html
+++ b/experiences.html
@@ -15,9 +15,8 @@
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
                 <a href="#experience-api-arte">Job Étudiant</a>
-                <a href="#experience-projets-persos">Projets personnels</a>
-                <a href="#experience-cineclub">Ciné-club</a>
                 <a href="#experience-42">Piscine école 42</a>
+                <a href="#experience-projets-persos">Projets personnels</a>
             </div>
         </div>
         <div class="nav-item">
@@ -32,7 +31,11 @@
             </div>
         </div>
         <div class="nav-item">
-            <a class="back-link" href="contact.html">Contact</a>
+            <a class="back-link" href="loisirs.html">Loisirs</a>
+            <div class="nav-submenu">
+                <a href="loisirs.html#experience-cineclub">Ciné-club</a>
+                <a href="loisirs.html#autre-loisirs">Autres loisirs</a>
+            </div>
         </div>
     </nav>
     <section class="section-experiences detail-page with-fixed-nav">
@@ -132,47 +135,8 @@
                 </article>
 
 
-                <article class="experience-card large" id="experience-cineclub">
-                    <div class="experience-images">
-                        <img class="exp-img top" src="image/Ciné1.jpg" alt="Projection ciné-club" />
-                        <img class="exp-img middle" src="image/cine2.jpg" alt="Équipe du ciné-club" />
-                        <img class="exp-img bottom" src="image/cine3.jpg" alt="Organisation d'une séance" />
-                    </div>
-                    <div class="experience-content">
-                        <h2>Ciné-club associatif</h2>
-                        <p class="experience-date">2023 – 2025</p>
-                        <p><strong>Expérience personnelle</strong></p>
-                        <p class="detail-intro">Membre actif d’un ciné-club local où j’ai participé à la préparation et à la gestion technique des projections hebdomadaires.</p>
 
-                        <div class="detail-section">
-                            <h3>Missions principales</h3>
-                            <ul>
-                                <li>Installation du matériel de projection et de sonorisation.</li>
-                                <li>Participation à la sélection des films et à la création des affiches de séances.</li>
-                                <li>Animation de débats et échanges après les projections.</li>
-                                <li>Communication sur les réseaux sociaux du club.</li>
-                            </ul>
-                        </div>
-
-                        <div class="detail-section">
-                            <h3>Compétences développées</h3>
-                            <ul>
-                                <li>Travail en équipe et gestion d’événements.</li>
-                                <li>Maîtrise du matériel audiovisuel (projecteur, table de mixage, micros, etc.).</li>
-                                <li>Organisation, créativité et communication orale.</li>
-                            </ul>
-                        </div>
-
-                        <p class="detail-highlight">Cette expérience m’a permis de combiner mes intérêts pour la technique et la culture, tout en apprenant à gérer des projets collectifs.</p>
-                    </div>
-                </article>
-
-                                <article class="experience-card large" id="experience-42">
-                    <div class="experience-images">
-                        <img class="exp-img top" src="image/421.png" alt="Travail en pair-programming" />
-                        <img class="exp-img middle" src="image/422.jpeg" alt="Campus 42" />
-                        <img class="exp-img bottom" src="image/423.JPG" alt="Session de code" />
-                    </div>
+                <article class="experience-card large" id="experience-42">
                     <div class="experience-content">
                         <h2>Piscine 42 - École 42 Mulhouse</h2>
                         <p class="experience-date">Juillet 2025 · Concours d'entrée réussi</p>
@@ -220,6 +184,10 @@
                             <li>Exploration du fonctionnement des API et de la communication client-serveur.</li>
                             <li>Développement d’outils d’automatisation et de scripts d’aide au jeu.</li>
                         </ul>
+                        <p>
+                            <strong>Exemple :</strong>
+                            <a class="card-link" href="https://github.com/glufy100/Pulse-Addon" target="_blank" rel="noreferrer">Pulse Addon pour Meteor Client (GitHub)</a>
+                        </p>
                     </div>
 
                     <div class="detail-section">
@@ -246,7 +214,6 @@
                 <p>
                     <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
                     <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://maps.google.com/?q=ARTE,+67000+Strasbourg" target="_blank" rel="noreferrer">Localiser ARTE Strasbourg   ---   </a>
                     <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
                 </p>
             </div>
