--- a/formations.html
+++ b/formations.html
@@ -15,9 +15,8 @@
             <a class="back-link" href="experiences.html">Expériences</a>
             <div class="nav-submenu">
                 <a href="experiences.html#experience-api-arte">Job Étudiant</a>
-                <a href="experiences.html#experience-projets-persos">Projets personnels</a>
-                <a href="experiences.html#experience-cineclub">Ciné-club</a>
                 <a href="experiences.html#experience-42">Piscine école 42</a>
+                <a href="experiences.html#experience-projets-persos">Projets personnels</a>
             </div>
         </div>
         <div class="nav-item">
@@ -32,7 +31,11 @@
             </div>
         </div>
         <div class="nav-item">
-            <a class="back-link" href="contact.html">Contact</a>
+            <a class="back-link" href="loisirs.html">Loisirs</a>
+            <div class="nav-submenu">
+                <a href="loisirs.html#experience-cineclub">Ciné-club</a>
+                <a href="loisirs.html#autre-loisirs">Autres loisirs</a>
+            </div>
         </div>
     </nav>
     <section class="section-formation detail-page with-fixed-nav">
@@ -160,7 +163,6 @@
                 <p>
                     <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
                     <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://maps.google.com/?q=ARTE,+67000+Strasbourg" target="_blank" rel="noreferrer">Localiser ARTE Strasbourg   ---   </a>
                     <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
                 </p>
             </div>
