--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                             <li>Course à pied</li>
                             <li>L'automobile</li>
                         </ul>
-                        <a class="accent-link" href="experiences.html#experience-42">En savoir plus</a>
+                        <a class="accent-link" href="loisirs.html#autres-loisirs">En savoir plus</a>
                     </article>
                 </div>
             </div>
