--- a/experiences.html
+++ b/experiences.html
@@ -45,7 +45,7 @@
                     <h2>Job Étudiant - ARTE Strasbourg</h2>
                     <p class="experience-date">Août 2025 · Prestataire API Restauration</p>
                     <p><strong>Expérience professionnelle</strong></p>
-                    <p class="detail-intro">Expérience en restauration collective au sein du siège européen d'ARTE à Strasbourg. Missions polyvalentes en légumerie, cafétéria, plonge et entretien des espaces communs dans un environnement professionnel exigeant.</p>
+                    <p class="detail-intro">Expérience en restauration collective au sein du siège européen d'ARTE à Strasbourg. J’ai participé au préparatif en légumerie, au service a la cafétéria, plonge et entretien des espaces communs dans un environnement professionnel exigeant.</p>
 
                     <div class="detail-section">
                         <h3>Contexte professionnel</h3>
@@ -212,9 +212,10 @@
             <h3>Liens utiles</h3>
             <div>
                 <p>
-                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
-                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
+                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
+                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
+                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
                 </p>
             </div>
         </div>
