--- a/formations.html
+++ b/formations.html
@@ -141,13 +141,20 @@
                 <article class="experience-card experience-detail" id="objectifs">
                     <h2>Objectifs futurs</h2>
                     <p class="experience-date">Après 2028</p>
-                    <p class="detail-intro">Viser un poste d’ingénieur Dev&nbsp;Cloud/DevOps dans l’audiovisuel ou les médias, en capitalisant sur l’expertise acquise en BUT et en maîtrisant la synchronisation PTP pour les flux broadcast.</p>
+                    <p class="detail-intro">Viser un poste d’ingénieur Cloud / DevOps, en capitalisant sur les compétences développées en BUT et sur la maîtrise des environnements distribués, de l’automatisation et de la synchronisation de systèmes (PTP ou équivalents) dans des architectures modernes.</p>
                     <div class="detail-section">
                         <h3>Prochains jalons</h3>
                         <ul>
-                            <li>Alternance en équipe Cloud / plateforme dédiée au signal audiovisuel</li>
-                            <li>Certifications (AWS, Azure, Kubernetes, etc.) et spécialisation PTP</li>
-                            <li>Projets personnels mêlant automatisation, multimédia et précision temporelle</li>
+                            <li>Alternance au sein d’une équipe Cloud ou plateforme technique orientée infrastructure, automatisation ou services distribués.</li>
+                            <li>Certifications (AWS, Azure, Kubernetes, etc.) et approfondissement des technologies de synchronisation, des pipelines DevOps et des architectures scalables.</li>
+                            <li>Projets personnels associant automatisation, CI/CD, orchestres de conteneurs, supervision et optimisation des performances.</li>
+                        </ul>
+                    </div>
+                    <div class="detail-section">
+                        <h3>Perspectives</h3>
+                        <ul>
+                            <li>Moyen terme : devenir opérateur / ingénieur DevCloud.</li>
+                            <li>Long terme : développer une véritable maîtrise du cloud, des plateformes et de l’automatisation sous toutes leurs formes (infrastructure, déploiement, orchestration, observabilité, performance).</li>
                         </ul>
                     </div>
                 </article>
@@ -161,9 +168,10 @@
             <h3>Liens utiles</h3>
             <div>
                 <p>
-                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
-                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
+                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
+                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
+                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
                 </p>
             </div>
         </div>
