--- a/index.html
+++ b/index.html
@@ -48,10 +48,19 @@
         <!-- Section de texte avec boîte de présentation -->
         <div class="text-section">
             <div class="text-box">
-                <h1>Louis Erb</h1>
+                <h1>Louis ERB</h1>
                 <p class="subtitle">Étudiant en 1re année de BUT Réseaux et Télécommunications</p>
                 <p>Je suis né le 31 octobre 2007 à Schiltigheim (Bas-Rhin), de nationalité franco-suisse. Au départ il y a eu les jeux sur mon PC, et petit à petit j’ai développé un véritable intérêt pour l’informatique. Mes stages en entreprise ainsi que les projets menés au lycée ont confirmé cette passion. L’école 42 a aussi attiré ma curiosité : j’y ai été admis après un mois intensif qui m’a donné de solides bases en programmation. J’ai finalement choisi l’IUT, où je développe des compétences en administration réseau, développement web et cybersécurité. Je suis également investi dans le milieu associatif. Pour en découvrir plus, je vous invite à explorer ce site.</p>
-                <p class="location-link">Basé à <a href="https://maps.google.com/?q=Mulhouse" target="_blank" rel="noreferrer">Mulhouse</a>, originaire de Strasbourg · Mobile dans tout le Grand Est</p>
+            </div>
+
+            <!-- Cartes contact sous la présentation -->
+            <div class="contact-cards">
+                <div class="contact-card">
+                    <p><strong>Téléphone: </strong>+33 6 81 61 63 05</p>
+                </div>
+                <div class="contact-card">
+                    <p><strong>Mail: </strong>louis.erb@outlook.fr</p>
+                </div>
             </div>
         </div>
     </header>
@@ -268,7 +277,7 @@
                     <div class="experience-content">
                         <h3>Le bûcheronnage</h3>
                         <p>Depuis plus de trois ans, je participe chaque année à la préparation de plus de 100 stères de bois avec un ami et sa famille. Nous faisons absolument tout nous-mêmes : couper, fendre, ranger et gérer le matériel, sans aucune entreprise pour nous aider.</p>
-                        <p>Cette expérience m'a permis de développer de vraies compétences : autonomie, organisation, travail d'équipe, utilisation d'outils en toute sécurité et une bonne endurance physique.</p>
+                        <p>Cette expérience m'a permis de développer de vraies compétences : organisation, travail d'équipe, utilisation d'outils en toute sécurité et une bonne endurance physique.</p>
                         <p>C'est une activité que j'apprécie particulièrement, autant pour l'aspect manuel que pour le travail en extérieur.</p>
                     </div>
                 </article>
@@ -304,9 +313,10 @@
             <h3>Liens utiles</h3>
             <div>
                 <p>
-                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
-                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
+                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
+                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
+                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
                 </p>
             </div>
         </div>
