--- a/loisirs.html
+++ b/loisirs.html
@@ -47,29 +47,30 @@
 
                 <!-- Ciné-club déplacé depuis experiences.html -->
                 <article class="experience-card large" id="experience-cineclub">
+                    <h2 class="cine-title">Ciné-club associatif</h2>
                     <div class="experience-content">
-                        <h2>Ciné-club associatif</h2>
                         <p class="experience-date">2023 – 2025</p>
                         <p><strong>Expérience personnelle</strong></p>
-                        <p class="detail-intro">Membre actif d’un ciné-club local : préparation technique des projections, sélection de films et animation d’échanges après séance.</p>
+                        <p class="detail-intro">Membre actif d’un ciné-club local, principalement chargé de la partie technique des séances : préparation du matériel audiovisuel, mise en place des projections et participation à l’analyse des films après visionnage.</p>
                         <div class="detail-section">
                             <h3>Missions principales</h3>
                             <ul>
-                                <li>Installation du matériel (projecteur, sonorisation).</li>
-                                <li>Participation à la programmation et aux visuels.</li>
-                                <li>Animation de débats post-projection.</li>
-                                <li>Communication sur les réseaux du club.</li>
+                                <li>Installation et réglages du matériel (projecteur, sonorisation, câblage).</li>
+                                <li>Gestion technique des projections et résolution de petits problèmes sur place.</li>
+                                <li>Contribution à la sélection des films et aux supports visuels.</li>
+                                <li>Participation aux échanges et analyses après projection.</li>
+                                <li>Aide ponctuelle à la communication du club.</li>
                             </ul>
                         </div>
                         <div class="detail-section">
                             <h3>Compétences développées</h3>
                             <ul>
-                                <li>Organisation d’événements collaboratifs.</li>
-                                <li>Usage de matériel audiovisuel.</li>
-                                <li>Communication orale et créativité.</li>
+                                <li>Maîtrise du matériel audiovisuel et des contraintes techniques de projection.</li>
+                                <li>Gestion technique en condition réelle.</li>
+                                <li>Communication orale lors des discussions après séance.</li>
+                                <li>Expérience mêlant technique, culture et travail collectif.</li>
                             </ul>
                         </div>
-                        <p class="detail-highlight">Expérience mêlant technique et culture, enrichissant mon sens du travail collectif.</p>
                     </div>
                     <div class="experience-images">
                         <img class="exp-img top" src="image/Ciné1.jpg" alt="Projection ciné-club" />
@@ -83,8 +84,9 @@
                     <div class="experience-content">
                         <h2>Jeux vidéo créatifs et ouverts</h2>
                         <p><strong>Minecraft, Scrap Mechanic…</strong></p>
-                        <p>J’apprécie particulièrement les jeux créatifs et ouverts comme Minecraft ou Scrap Mechanic. Ce sont des jeux modables qui permettent de construire, expérimenter et créer librement.</p>
-                        <p>Ils développent ma créativité, ma logique et mon intérêt pour la conception de systèmes, tout en me permettant d’explorer des univers ouverts où je peux imaginer mes propres projets.</p>
+                        <p>J’apprécie particulièrement les jeux créatifs et ouverts comme Minecraft ou Scrap Mechanic. Leur aspect entièrement modable offre une grande liberté : construire, expérimenter, concevoir des systèmes complexes et personnaliser l’expérience de jeu.</p>
+                        <p>Ces jeux me permettent d’exprimer ma créativité tout en développant des compétences utiles : logique, résolution de problèmes, organisation de projets, compréhension de mécanismes techniques (circuiterie, automatisations, interactions entre éléments). J’aime notamment imaginer des constructions avancées, tester différentes mécaniques, optimiser mes créations et explorer des univers ouverts où chaque idée peut être transformée en projet concret.</p>
+                        <p>Cette manière de jouer nourrit mon intérêt pour la technique, la conception et l’expérimentation, tout en offrant un espace où je peux créer librement et repousser mes propres limites.</p>
                     </div>
                 </article>
 
@@ -96,7 +98,6 @@
                         <p>La randonnée est pour moi un vrai plaisir : elle développe mon endurance, mon goût de l’effort et mon attachement aux activités en plein air.</p>
                     </div>
                     <div class="experience-images">
-                        <!-- Remplace les src ci-dessous par tes propres photos de Suisse -->
                         <img class="exp-img top" src="image/Randoné1.jpeg" alt="Paysage de montagne en Suisse" />
                         <img class="exp-img middle" src="image/Randoné2.jpeg" alt="Sentier de randonnée en Suisse" />
                         <img class="exp-img bottom" src="image/Randoné3.jpeg" alt="Vue panoramique en Suisse" />
@@ -112,9 +113,10 @@
             <h3>Liens utiles</h3>
             <div>
                 <p>
-                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   ---   </a>
-                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   ---   </a>
-                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse</a>
+                    <a href="https://www.arte.tv/fr/" target="_blank" rel="noreferrer">ARTE   |   </a>
+                    <a href="https://www.api-restauration.com/" target="_blank" rel="noreferrer">API Restauration   |   </a>
+                    <a href="https://www.42mulhouse.fr/" target="_blank" rel="noreferrer">École 42 Mulhouse   |   </a>
+                    <a href="https://www.iutcolmar.uha.fr/" target="_blank" rel="noreferrer">IUT Colmar</a>
                 </p>
             </div>
         </div>
