--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
                     <div class="detail-content" id="detail-pix">
                         <h4>Certification PIX</h4>
-                        <p class="date">Session 2024 — Compétences numériques certifiées</p>
+                        <p class="date">Session 2025 — Compétences numériques certifiées</p>
                         <p>Certification nationale évaluant les usages numériques essentiels, la sécurité en ligne et la résolution de problèmes informatiques. Elle atteste d’un niveau solide sur la gestion des données et la maîtrise des outils modernes.</p>
                         <p><strong>Points forts :</strong></p>
                         <ul>
@@ -159,7 +159,7 @@
                     <div class="detail-content" id="detail-avenir">
                         <h4>Objectifs professionnels</h4>
                         <p class="date">Après 2028</p>
-                        <p>Projet à moyen terme : devenir ingénieur Dev&nbsp;Cloud/DevOps dans l’audiovisuel ou les médias, avec un focus particulier sur la synchronisation précise des flux via le PTP (Precision Time Protocol).</p>
+                        <p>Projet à moyen terme : devenir ingénieur Dev Cloud/DevOps,<br>Développer des compétences approfondies sur le PTP (Precision Time Protocol).</p>
                         <p><strong>Prochaines étapes :</strong></p>
                         <ul>
                             <li>Alternance en équipe Cloud/plateforme traitant de l’audiovisuel temps réel</li>
@@ -188,7 +188,7 @@
                         <h3>Job Étudiant - API</h3>
                         <p class="experience-date">Août 2025</p>
                         <p><strong>Expérience professionnelle</strong></p>
-                        <p>Travail en restauration au sein des bâtiments d’ARTE à Strasbourg pour le prestataire API. Je participais à la préparation en légumerie, à l’aide à la cafétéria, à la plonge et au nettoyage des espaces. J’ai appris à respecter strictement les règles d’hygiène et de sécurité, à organiser mon travail efficacement et à maintenir un bon rythme dans un environnement exigeant. Cette expérience m’a permis de développer ma rigueur, mon autonomie et mon sens du travail en équipe.</p>
+                        <p>Travail en restauration au sein des bâtiments d’ARTE à Strasbourg pour le prestataire API. J’ai participé aux préparatifs en légumerie, au service à la cafétéria, à la plonge et au nettoyage des espaces. J’ai appris à respecter strictement les règles d’hygiène et de sécurité, à organiser mon travail efficacement et à maintenir un bon rythme dans un environnement exigeant. Cette expérience m’a permis de développer ma rigueur, mon autonomie et mon sens du travail en équipe.</p>
                         <a class="accent-link" href="experiences.html#experience-api-arte">En savoir plus</a>
                     </div>
                 </article>
@@ -277,8 +277,7 @@
                     <div class="experience-content">
                         <h3>Le bûcheronnage</h3>
                         <p>Depuis plus de trois ans, je participe chaque année à la préparation de plus de 100 stères de bois avec un ami et sa famille. Nous faisons absolument tout nous-mêmes : couper, fendre, ranger et gérer le matériel, sans aucune entreprise pour nous aider.</p>
-                        <p>Cette expérience m'a permis de développer de vraies compétences : organisation, travail d'équipe, utilisation d'outils en toute sécurité et une bonne endurance physique.</p>
-                        <p>C'est une activité que j'apprécie particulièrement, autant pour l'aspect manuel que pour le travail en extérieur.</p>
+                        <p>C'est une activité que j'apprécie particulièrement, Elle apporte la satisfaction du travail accompli tout en partageant des moments de convivialités dans un cadre naturel.</p>
                     </div>
                 </article>
 
@@ -288,7 +287,7 @@
                         <h3>Ciné-club</h3>
                         <p class="experience-date">2023-2025</p>
                         <p><strong>Expérience personnelle</strong></p>
-                        <p>Participation active à un ciné-club, organisation de séances, discussion et analyse de films, développement de compétences en communication et travail en groupe.</p>
+                        <p>Participation aux activités d’un ciné-club qui organise des séances thématiques, qui rassemble un public autour de débats, analyse de films, échange avec les réalisateurs et invités de marques pour approfondir les sujets proposés.</p>
                         <a class="accent-link" href="loisir.html#experience-cineclub">En savoir plus</a>
                     </article>
                     <article class="experience-card small">
