--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio - Version Cours</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -110,7 +110,7 @@
                     
                     <div class="detail-content" id="detail-bac">
                         <h4>Lycée Heinrich Nessel (Haguenau) - STI2D</h4>
-                        <p>BAC avec Mention Assez Bien</p>
+                        <p class = "date">2025 - BAC avec Mention Assez Bien</p>
                         <p>Parcours orienté Systèmes d’Information et Numérique, avec initiation à l’électronique embarquée et aux systèmes connectés. J’y ai découvert la programmation de microcontrôleurs et la conception de petites maquettes techniques.</p>
                         <p><strong>Compétences développées :</strong></p>
                         <ul>
@@ -122,7 +122,7 @@
                     
                     <div class="detail-content" id="detail-but1">
                         <h4>BUT Réseaux & Télécoms – 1re année</h4>
-                        <p class="date">IUT de Colmar — 2025-2026</p>
+                        <p class="date">2025-2026 - IUT de Colmar</p>
                         <p>Première année centrée sur les bases des réseaux informatiques, l’administration système et les technologies web. La formation pose les fondations nécessaires pour comprendre les architectures IP et les services associés.</p>
                         <p><strong>Modules principaux :</strong></p>
                         <ul>
@@ -276,7 +276,7 @@
                     </div>
                     <div class="experience-content">
                         <h3>Le bûcheronnage</h3>
-                        <p>Depuis plus de trois ans, je participe chaque année à la préparation de plus de 100 stères de bois avec un ami et sa famille. Nous faisons absolument tout nous-mêmes : couper, fendre, ranger et gérer le matériel, sans aucune entreprise pour nous aider.</p>
+                         <p>Depuis plus de trois ans, je participe chaque année à la préparation de plus de 100 stères de bois avec un ami et sa famille. Nous faisons absolument tout nous-mêmes : couper, fendre, ranger et gérer le matériel, sans aucune entreprise pour nous aider.</p>
                         <p>C'est une activité que j'apprécie particulièrement, Elle apporte la satisfaction du travail accompli tout en partageant des moments de convivialités dans un cadre naturel.</p>
                     </div>
                 </article>
